ncc/testsuite/positive/bug-1144.n
using System.Console;

module Program
{
    public Main() : void
    {
        def f(x) { x == 0 }
        
        match([], 0)
        {
            | ([_], _)          => ()
            | (_, x) when f(x)  => WriteLine("OK"); // <-- ICE
            | _                 => ()
        }
    }
}
/*
BEGIN-OUTPUT
OK
END-OUTPUT
*/