ncc/testsuite/negative/bug-1193.n
using System.Console;

module Program
{
  Main() : void
  {
    def s = "";
    Foo(s.Extension) //E: none of the overloads of Extension is possible
  }
  
  Foo(_ : string * string -> void) : void { }
  
  public Extension(this _x : string, _y : string) : void { }
  
} 